--- a/tms/tms-service-impl/src/main/resources/config.properties
+++ b/tms/tms-service-impl/src/main/resources/config.properties
@@ -1,4 +1,11 @@
+#jdbc
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql:///tms?useSSL=false
 jdbc.username=root
 jdbc.password=longwear
+
+#qiniu
+
+qiniu.ak=yuPfbDv_j5sX6dd5jPO1oYK5lhes1z0MQgmx-VNO
+qiniu.sk=PSyAB3dBOUdXBMEKj9TeHq84ngDWgWq6SHoWUtSk
+qiniu.bucket=drmspringtms
