--- a/tms/pom.xml
+++ b/tms/pom.xml
@@ -85,11 +85,13 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>2.9.4</version>
             </dependency>
+            <!--导不进-->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.6</version>
             </dependency>
+
             <dependency>
                 <groupId>commons-fileupload</groupId>
                 <artifactId>commons-fileupload</artifactId>
