--- a/tms/tms-service/pom.xml
+++ b/tms/tms-service/pom.xml
@@ -23,6 +23,12 @@
             <groupId>com.kaishengit</groupId>
             <artifactId>tms-commons</artifactId>
         </dependency>
+        <!--mybatis分页插件-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
