--- a/tms/pom.xml
+++ b/tms/pom.xml
@@ -16,7 +16,8 @@
         <module>./tms-service</module>
         <module>./tms-service-impl</module>
         <!--<module>./tms-manager-web</module>
-        <module>./tms-finance-web</module>-->
+        <module>./tms-finance-web</module>
+        <module>./tms-sales-web</module>-->
     </modules>
 
 
