--- a/tms/tms-finance-web/pom.xml
+++ b/tms/tms-finance-web/pom.xml
@@ -49,6 +49,11 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
 
         <!--shiro-->
         <dependency>
@@ -63,6 +68,14 @@
             <artifactId>ehcache</artifactId>
             <version>2.10.4</version>
         </dependency>
+        <!--joda date-->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
+
 
 
         <!--dubbo-->
