--- a/tms/tms-manager-web/src/main/resources/config.properties
+++ b/tms/tms-manager-web/src/main/resources/config.properties
@@ -1,4 +1,4 @@
 #qiniu
-qiniu.ak=bl6CDqtGYWDbdT-sDUnGuwgQNSj33tW5sjRJXGSr
-qiniu.sk=YNBKcFZNNz-Jnj_e9_HlIEGI1AflG5KM5MIdadmX
-qiniu.bucket=kaishengit-tms
+qiniu.ak=yuPfbDv_j5sX6dd5jPO1oYK5lhes1z0MQgmx-VNO
+qiniu.sk=PSyAB3dBOUdXBMEKj9TeHq84ngDWgWq6SHoWUtSk
+qiniu.bucket=myclouddisk
