--- a/tms/pom.xml
+++ b/tms/pom.xml
@@ -82,6 +82,11 @@
                 <version>4.3.14.RELEASE</version>
             </dependency>
             <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>4.3.14.RELEASE</version>
+            </dependency>
+            <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>2.9.4</version>
