--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -3,3 +3,18 @@ server.port=80
 server.session.timeout=3600
 
 #debug=true
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql:///mydb
+spring.datasource.username=root
+spring.datasource.password=longwear
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+
+#tomcat datasource
+#spring.datasource.tomcat.max-active=20
+#spring.datasource.tomcat.max-wait=5000
+
+
+#hikari datasource
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=5
