--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -18,3 +18,28 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #hikari datasource
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.minimum-idle=5
+
+
+#mybatis
+#别名所在的包
+mybatis.type-aliases-package=com.kaishengit.entity
+#mapper的xml文件的位置
+mybatis.configuration.map-underscore-to-camel-case=true
+#开启下划线转驼峰命名
+mybatis.mapper-locations=classpath:mapper/*.xml
+#在控制台打印mybatis的sql日志
+logging.level.com.kaishengit.mapper=debug
+
+
+#pagehelper
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
+
+#指定日志存放目录，在当前目录中产生名称spring.log
+logging.path=E:/temp/log
+
+#redis
+spring.redis.host=192.168.159.116
+spring.redis.port=6379
